--- a/elements/crew-team-manager-erg/crew-team-manager-erg-detail-results.html
+++ b/elements/crew-team-manager-erg/crew-team-manager-erg-detail-results.html
@@ -81,8 +81,8 @@
                     <div id="model">
                         Model: [[data.model]]
                     </div>
-                    <div id="scareen-type">
-                        Screen Type: [[data.condition]]
+                    <div id="screen-type">
+                        Screen Type: [[data.screenType]]
                     </div>
                     <div id="condition">
                         Condition: [[data.condition]]
