--- a/elements/crew-team-manager-erg/crew-team-manager-erg.html
+++ b/elements/crew-team-manager-erg/crew-team-manager-erg.html
@@ -60,7 +60,8 @@
                 on-crew-team-manager-erg-edit-action-saved="_handleActionSaved">
             </crew-team-manager-erg-edit>
 
-            <crew-team-manager-erg-create id="create" on-crew-team-manager-erg-create-action-cancel="_handleActionCancel" on-crew-team-manager-erg-create-action-created="_handleActionCreated">
+            <crew-team-manager-erg-create id="create" team-id="[[teamId]]" on-crew-team-manager-erg-create-action-cancel="_handleActionCancel"
+                on-crew-team-manager-erg-create-action-created="_handleActionCreated">
             </crew-team-manager-erg-create>
         </iron-pages>
 
