--- a/elements/crew-team-manager-finance/crew-team-manager-finance.html
+++ b/elements/crew-team-manager-finance/crew-team-manager-finance.html
@@ -60,7 +60,8 @@
                 on-crew-team-manager-finance-edit-action-saved="_handleActionSaved">
             </crew-team-manager-finance-edit>
 
-            <crew-team-manager-finance-create id="create" on-crew-team-manager-finance-create-action-cancel="_handleActionCanceled" on-crew-team-manager-finance-create-action-created="_handleActionCreated">
+            <crew-team-manager-finance-create id="create" team-id="[[teamId]]" on-crew-team-manager-finance-create-action-cancel="_handleActionCanceled"
+                on-crew-team-manager-finance-create-action-created="_handleActionCreated">
             </crew-team-manager-finance-create>
         </iron-pages>
 
