--- a/elements/crew-team-manager-fleet/crew-team-manager-fleet-edit.html
+++ b/elements/crew-team-manager-fleet/crew-team-manager-fleet-edit.html
@@ -134,6 +134,8 @@
             }
 
             _handleActionSave(e) {
+                this.edit.updated = this.$.firebase.app.firebase_.database.ServerValue.TIMESTAMP;
+                this.edit.size = parseInt(this.edit.size);
                 this.$.firebase.data = JSON.parse(JSON.stringify(this.edit));
                 this.$.firebase.saveValue('boats', this.boat)
                     .then(() => {
