--- a/elements/crew-team-manager-oar/crew-team-manager-oar.html
+++ b/elements/crew-team-manager-oar/crew-team-manager-oar.html
@@ -60,7 +60,8 @@
                 on-crew-team-manager-oar-edit-action-saved="_handleActionSaved">
             </crew-team-manager-oar-edit>
 
-            <crew-team-manager-oar-create id="create" on-crew-team-manager-oar-create-action-cancel="_handleActionCancel" on-crew-team-manager-oar-create-action-created="_handleActionCreated">
+            <crew-team-manager-oar-create id="create" team-id="[[teamId]]" on-crew-team-manager-oar-create-action-cancel="_handleActionCancel"
+                team-id="[[teamId]]" on-crew-team-manager-oar-create-action-created="_handleActionCreated">
             </crew-team-manager-oar-create>
         </iron-pages>
 
