--- a/elements/crew-team-manager-picture/crew-team-manager-picture.html
+++ b/elements/crew-team-manager-picture/crew-team-manager-picture.html
@@ -58,7 +58,8 @@
                 on-crew-team-manager-picture-edit-action-saved="_handleActionSaved">
             </crew-team-manager-picture-edit>
 
-            <crew-team-manager-picture-create id="create" on-crew-team-manager-picture-create-action-cancel="_handleActionCancel" on-crew-team-manager-picture-create-action-created="_handleActionCreated">
+            <crew-team-manager-picture-create id="create" team-id="[[teamId]]" on-crew-team-manager-picture-create-action-cancel="_handleActionCancel"
+                on-crew-team-manager-picture-create-action-created="_handleActionCreated">
             </crew-team-manager-picture-create>
         </iron-pages>
 
