--- a/elements/crew-team-manager-race/crew-team-manager-race-edit.html
+++ b/elements/crew-team-manager-race/crew-team-manager-race-edit.html
@@ -115,6 +115,8 @@
             }
 
             _handleActionSave(e) {
+                this.edit.updated = this.$.firebase.app.firebase_.database.ServerValue.TIMESTAMP;
+                this.edit.bowNumber = parseInt(this.edit.bowNumber);
                 this.$.firebase.data = JSON.parse(JSON.stringify(this.edit));
                 this.$.firebase.saveValue('races', this.race)
                     .then(() => {
