--- a/elements/crew-team-manager-race/crew-team-manager-race.html
+++ b/elements/crew-team-manager-race/crew-team-manager-race.html
@@ -58,7 +58,8 @@
                 on-crew-team-manager-race-edit-action-saved="_handleActionSaved">
             </crew-team-manager-race-edit>
 
-            <crew-team-manager-race-create id="create" on-crew-team-manager-race-create-action-cancel="_handleActionCancel" on-crew-team-manager-race-create-action-created="_handleActionCreated">
+            <crew-team-manager-race-create id="create" team-id="[[teamId]]" on-crew-team-manager-race-create-action-cancel="_handleActionCancel"
+                on-crew-team-manager-race-create-action-created="_handleActionCreated">
             </crew-team-manager-race-create>
         </iron-pages>
 
