--- a/elements/crew-team-manager-rigger/crew-team-manager-rigger.html
+++ b/elements/crew-team-manager-rigger/crew-team-manager-rigger.html
@@ -59,7 +59,8 @@
             </crew-team-manager-rigger-edit>
 
 
-            <crew-team-manager-rigger-create id="create" on-crew-team-manager-rigger-create-action-cancel="_handleActionCancel" on-crew-team-manager-rigger-create-action-created="_handleActionCreated">
+            <crew-team-manager-rigger-create id="create" team-id="[[teamId]]" on-crew-team-manager-rigger-create-action-cancel="_handleActionCancel"
+                on-crew-team-manager-rigger-create-action-created="_handleActionCreated">
             </crew-team-manager-rigger-create>
         </iron-pages>
 
