--- a/elements/crew-team-manager-roster/crew-team-manager-roster.html
+++ b/elements/crew-team-manager-roster/crew-team-manager-roster.html
@@ -58,7 +58,8 @@
                 on-crew-team-manager-roster-edit-action-saved="_handleActionSaved">
             </crew-team-manager-roster-edit>
 
-            <crew-team-manager-roster-create id="create" on-crew-team-manager-roster-create-action-cancel="_handleActionCancel" on-crew-team-manager-roster-create-action-created="_handleActionCreated">
+            <crew-team-manager-roster-create id="create" team-id="[[teamId]]" on-crew-team-manager-roster-create-action-cancel="_handleActionCancel"
+                on-crew-team-manager-roster-create-action-created="_handleActionCreated">
                 </crew-team-manager-creater-edit>
         </iron-pages>
 
