--- a/elements/crew-team-manager-schedule/crew-team-manager-schedule.html
+++ b/elements/crew-team-manager-schedule/crew-team-manager-schedule.html
@@ -59,7 +59,8 @@
                 on-crew-team-manager-schedule-edit-action-saved="_handleActionSaved">
             </crew-team-manager-schedule-edit>
 
-            <crew-team-manager-schedule-create id="create" on-crew-team-manager-schedule-create-action-cancel="_handleActionCancel" on-crew-team-manager-schedule-create-action-created="_handleActionCreated">
+            <crew-team-manager-schedule-create id="create" team-id="[[teamId]]" on-crew-team-manager-schedule-create-action-cancel="_handleActionCancel"
+                on-crew-team-manager-schedule-create-action-created="_handleActionCreated">
             </crew-team-manager-schedule-create>
         </iron-pages>
 
