--- a/elements/crew-team-manager-finance/crew-team-manager-finance-edit.html
+++ b/elements/crew-team-manager-finance/crew-team-manager-finance-edit.html
@@ -114,6 +114,10 @@
             }
 
             _handleActionSave(e) {
+                this.edit.updated = this.$.firebase.app.firebase_.database.ServerValue.TIMESTAMP;
+                this.edit.incomes = parseInt(this.edit.incomes);
+                this.edit.expenses = parseInt(this.edit.expenses);
+                this.edit.gross = this.edit.incomes - this.edit.expenses;
                 this.$.firebase.data = JSON.parse(JSON.stringify(this.edit));
                 this.$.firebase.saveValue('finances', this.finance)
                     .then(() => {
