--- a/elements/crew-team-manager-fleet/crew-team-manager-fleet-roster-list.html
+++ b/elements/crew-team-manager-fleet/crew-team-manager-fleet-roster-list.html
@@ -35,6 +35,7 @@
 
             #layout {
                 @apply(--layout-vertical);
+                @apply(--layout-flex);
             }
 
             #toolbar {
@@ -47,14 +48,8 @@
                 position: relative;
             }
 
-            #loading {
-                @apply(--layout-fit);
-            }
-
-            #results {
-                @apply(--layout-fit);
-            }
-
+            #loading,
+            #results,
             #message {
                 @apply(--layout-fit);
             }
@@ -122,6 +117,13 @@
 
             _handleActionAdd() {
                 console.log('add athletes to the boat')
+            }
+
+            _handleActionBack() {
+                this.dispatchEvent(new CustomEvent(crewTeamManagerFleetRosterList.is + '-action-back', {
+                    bubbles: true,
+                    composed: true,
+                }));
             }
 
             _changePage(page) {
