--- a/elements/crew-team-manager-picture/crew-team-manager-picture-create.html
+++ b/elements/crew-team-manager-picture/crew-team-manager-picture-create.html
@@ -94,9 +94,13 @@
                         type: Object,
                         value: {
                             caption: '',
-                            url: ''
+                            url: '',
+                            created: 0,
+                            updated: 0
                         }
                     },
+
+                    teamId: String,
 
                     picture: {
                         type: String
@@ -112,7 +116,9 @@
             _resetCreate() {
                 this.create = {
                     caption: '',
-                    url: ''
+                    url: '',
+                    updated: 0,
+                    created: 0
                 }
             }
 
@@ -125,6 +131,9 @@
             }
 
             _handleActionCreate(e) {
+                this.create.updated = this.$.firebase.app.firebase_.database.ServerValue.TIMESTAMP;
+                this.create.created = this.$.firebase.app.firebase_.database.ServerValue.TIMESTAMP;
+                this.create.team = this.teamId;
                 this.$.firebase.saveValue('pictures')
                     .then(() => {
                         this.$.firebase.setStoredValue(this.$.firebase.path, this.create);
