--- a/elements/crew-team-manager-picture/crew-team-manager-picture-edit.html
+++ b/elements/crew-team-manager-picture/crew-team-manager-picture-edit.html
@@ -113,6 +113,7 @@
             }
 
             _handleActionSave(e) {
+                this.edit.updated = this.$.firebase.app.firebase_.database.ServerValue.TIMESTAMP;
                 this.$.firebase.data = JSON.parse(JSON.stringify(this.edit));
                 this.$.firebase.saveValue('pictures', this.picture)
                     .then(() => {
