--- a/elements/crew-team-manager-rigger/crew-team-manager-rigger-create.html
+++ b/elements/crew-team-manager-rigger/crew-team-manager-rigger-create.html
@@ -125,10 +125,13 @@
                             side: '',
                             style: '',
                             type: '',
-                            seat: ''
+                            seat: 0,
+                            created: 0,
+                            updated: 0
                         }
-
                     },
+
+                    teamId: String,
 
                     rigger: {
                         type: String
@@ -146,7 +149,9 @@
                     side: '',
                     style: '',
                     type: '',
-                    seat: ''
+                    seat: 0,
+                    updated: 0,
+                    created: 0
                 }
             }
 
@@ -159,6 +164,10 @@
             }
 
             _handleActionCreate(e) {
+                this.create.updated = this.$.firebase.app.firebase_.database.ServerValue.TIMESTAMP;
+                this.create.created = this.$.firebase.app.firebase_.database.ServerValue.TIMESTAMP;
+                this.create.team = this.teamId;
+                this.create.seat = parseInt(this.create.seat);
                 this.$.firebase.saveValue('riggers')
                     .then(() => {
                         this.$.firebase.setStoredValue(this.$.firebase.path, this.create);
